Fixed cucumber tests

--- a/pom.xml
+++ b/pom.xml
@@ -133,7 +133,7 @@
                         <configuration>
                             <rules>
                                 <rule>
-                                    <element>CLASS</element>
+                                    <element>BUNDLE</element>
                                     <excludes>
                                         <exclude>*Test</exclude>
                                         <exclude>*Runner</exclude>
@@ -142,7 +142,7 @@
                                         <limit>
                                             <counter>LINE</counter>
                                             <value>COVEREDRATIO</value>
-                                            <minimum>0.2</minimum>
+                                            <minimum>0.7</minimum>
                                         </limit>
                                     </limits>
                                 </rule>
